<resources>
    <string name="app_name">FreeMeper</string>
    <string name="free_appName_EN">FreeMeper</string>
    <string name="free_appName_CN">多媒体管理</string>
    <string name="free_welcome_allRights">©2017, Valence.Soft. All Rights Reserved</string>
    <string name="free_video">VideoPlayer</string>
    <string name="free_image">ImageViewer</string>
    <string name="free_music">MusicPlayer</string>
    <string name="free_text">TextViewer</string>
    <string name="free_introduce">Introduce</string>
    <string name="free_about">关于</string>
    <string name="free_setting">设置</string>
    <string name="free_image_num">张图片</string>
    <string name="free_skip">跳过(%d)</string>
    <string name="free_album">相册</string>
    <string name="free_select_all">全选</string>
    <string name="free_select_all_not">全不选</string>
    <string name="free_delete">删除</string>
    <string name="free_have_select">已选择: %1$d 个相册</string>
    <string name="free_select_back">反选</string>
    <string name="free_about_default_text">VALENCE0001</string>
    <string name="free_default_version">V1.0.0.0 beta</string>
    <string name="free_device_id">设备ID</string>
    <string name="free_model">设备型号</string>
    <string name="free_hard_version">硬件版本</string>
    <string name="free_version">软件版本</string>
    <string name="free_upgrade">检测更新</string>
    <string name="free_video_num">个视频</string>
    <string name="video">视频</string>
    <string name="has_select_list">已选择: %1$d 项</string>
    <string name="rename">重命名</string>
    <string name="loading">正在加载, 请稍候...</string>
    <string name="reGranted">重新授权</string>
    <string name="continue_run">继续运行</string>
    <string name="permissions_half_baked">权限的授权不完整, 下次启动时将重新授权</string>
    <string name="permission_tip">运行时权限不完整, 继续运行软件可能会造成部分功能异常, 要继续运行吗?</string>
    <string name="device_one_camera">设备只有一个摄像头</string>
    <string name="choose_camera">选择相机</string>
    <string name="back_camera">后置</string>
    <string name="front_camera">前置</string>
    <string name="getCameraCountError">获取摄像头数量失败</string>
    <string name="support_resolution_null">支持分辨率为空</string>
    <string name="camera_support_resolution">摄像头支持分辨率</string>
    <string name="camera_album">CameraAlbum</string>
    <string name="root_dir">根目录</string>
    <string name="latest_version">已是最新版本</string>
</resources>
