<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100sp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_free_album_select_menu"
    android:orientation="vertical"
    android:padding="1dp">

    <TextView
        android:id="@+id/albumSelectAllNone"
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:background="@drawable/bg_free_ripple_menu_item"
        android:gravity="center_vertical"
        android:paddingEnd="0sp"
        android:paddingStart="5sp"
        android:text="@string/free_select_all"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/albumSelectBack"
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:background="@drawable/bg_free_ripple_menu_item"
        android:gravity="center_vertical"
        android:paddingEnd="0sp"
        android:paddingStart="5sp"
        android:text="@string/free_select_back"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/albumSelectDelete"
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:background="@drawable/bg_free_ripple_menu_item"
        android:gravity="center_vertical"
        android:paddingEnd="0sp"
        android:paddingStart="5sp"
        android:text="@string/free_delete"
        android:textColor="@color/black"
        android:textSize="18sp" />
</LinearLayout>
