<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:minHeight="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context="com.valence.freemeper.welcome.WelcomeActivity">

    <Button
        android:id="@+id/free_welcome_skip"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/free_skip"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/svg_free_welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:text="@string/free_appName_EN"
            android:textColor="@color/deepGray"
            android:textSize="24sp" />

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0sp"-->
        <!--android:layout_marginTop="2sp"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="top"-->
        <!--android:text="@string/free_appName_CN"-->
        <!--android:textColor="@color/deepGray"-->
        <!--android:textSize="24sp" />-->
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/app_name"
        android:src="@drawable/svg_free_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/free_welcome_allRights"
        android:textColor="@color/gray"
        android:textSize="18sp" />
</LinearLayout>
