<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:minHeight="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context="com.valence.freemeper.welcome.WelcomeActivity">

    <Button
        android:id="@+id/free_welcome_skip"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_free_welcome_skip"
        android:gravity="center"
        android:text="@string/free_skip"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/free_welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free_welcome_skip">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/svg_free_welcome" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0sp"
                    android:layout_marginStart="5sp"
                    android:layout_marginBottom="2sp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/free_appName_EN"
                    android:textColor="@color/deepGray"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0sp"
                    android:layout_marginTop="2sp"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/free_appName_CN"
                    android:textColor="@color/deepGray"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/NULLView" />
    </FrameLayout>

    <TextView
        android:id="@+id/free_welcome_rights"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/free_welcome_allRights"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/svg_free_logo"
        app:layout_constraintBottom_toTopOf="@+id/free_welcome_rights"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free_welcome_title" />

</android.support.constraint.ConstraintLayout>
