<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultThemeColor"
    android:fitsSystemWindows="true"
    android:minHeight="?attr/actionBarSize"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar_nr" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:splitMotionEvents="false">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@null"
                android:src="@drawable/svg_free_logo" />

            <RelativeLayout
                android:id="@+id/about_device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_free_ripple_normal"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#d8d8d8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_item_height"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/free_device_id"
                    android:textColor="#4d4d4d"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_device_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/free_about_default_text"
                    android:textColor="#757575"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_free_ripple_normal"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#d8d8d8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_item_height"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/free_model"
                    android:textColor="#4d4d4d"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/free_about_default_text"
                    android:textColor="#757575"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_hardVer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_free_ripple_normal"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#d8d8d8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_item_height"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/free_hard_version"
                    android:textColor="#4d4d4d"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_hardVer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/free_about_default_text"
                    android:textColor="#757575"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_free_ripple_normal"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#d8d8d8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_item_height"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/free_version"
                    android:textColor="#4d4d4d"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/free_default_version"
                    android:textColor="#757575"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_free_ripple_normal"
                android:clickable="true"
                android:focusable="true">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#d8d8d8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_item_height"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/free_upgrade"
                    android:textColor="#4d4d4d"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#d8d8d8" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

    <!--</ScrollView>-->